<resources>
    <string name="app_name">Assignment6</string>
    <string name="title">Profile Info</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
</resources>